cabal-version:       3.0
name:                gcubes-demo
version:             0.0.1.0
synopsis:            Example of the usage of gcubes library for rendering simple 3d scenes.
description:
  Example of the usage of gcubes library for rendering simple 3d scenes. TODO: exand this.
license:             MIT
license-file:        LICENSE
copyright:           2024 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Graphics
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 9.10.1

source-repository head
  type: git
  location: https://github.com/NCrashed/gcubes

common warnings
    ghc-options: -Wall

executable gcubes-demo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.20
      , gcubes ^>=0.0.1
    hs-source-dirs:   app
    default-language: GHC2021
